--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -11,8 +11,9 @@
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
@@ -46,13 +47,25 @@
         <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
         <a href="/login">Sign In / Sign UP</a>
     </nav>
-    <article class="container mt-3">
+<!--     <div class="container alert-container">
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+                <div class="alert alert-warning">
+                    <strong>Sale Now On!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
+                    <a href="">See here for details!</a>
+                </div>
+            </div>
+        </div>
+    </div> -->
+<div class="container-fluid callout-container">
     <!-- Callout -->
+    <div class="opaque-overlay">&nbsp;</div>
     <div class="row">
         <div class="col-12">
             <section class="callout jumbotron text-center">
-                 <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
+                 <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+                 <hr class="block-divider .block-divider--orange">  
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
                         <s class="d-none d-sm-inline">$19.99</s> 
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>First one is free!</mark></strong></p>
@@ -63,9 +76,10 @@
     </div>
     
     <!-- Callout -->
-    <hr>
+    </div>
 
     <!-- Quotes -->
+<div class="container quotes-container">
   <section class="quotes">
         <div class="row">   
             </div class="col-12">
@@ -88,9 +102,10 @@
         </div>
     </section>
     <!-- /.quotes -->  
-    <hr>
+    </div>
 
     <!-- Features-->   
+<div class="container quotes-container">
     <section class="features">
         <div class="row">
              <div class="col-12">
@@ -121,7 +136,9 @@
         </div>
     </div>
     </section>
-    </article>
+</div>
+
+
 <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
